--- a/versions.gradle
+++ b/versions.gradle
@@ -9,6 +9,7 @@ ext {
     mediaVersion = "1.5.0"
     constraintlayoutVersopn = "2.1.4"
     recyclerviewVersopn = "1.2.1"
+    fragmentKtxVersion = "1.4.1"
     viewbindingpropertydelegateVersion = "1.5.6"
     multidexVersion = "2.0.1"
     /**
