--- a/versions.gradle
+++ b/versions.gradle
@@ -8,6 +8,7 @@ ext {
     appcompatVersion = "1.4.1"
     mediaVersion = "1.5.0"
     constraintlayoutVersopn = "2.1.4"
+    swiperefreshlayoutVersion= "1.1.0"
     recyclerviewVersopn = "1.2.1"
     fragmentKtxVersion = "1.4.1"
     viewbindingpropertydelegateVersion = "1.5.6"
