--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,9 +73,9 @@ dependencies {
     /* Navigation */
     implementation"com.github.terrakok:cicerone:$ciceroneVersion"
     // Rx
-    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
-    implementation "io.reactivex.rxjava2:rxjava:2.2.10"
-    implementation "io.reactivex.rxjava2:rxkotlin:2.3.0"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
+    implementation "io.reactivex.rxjava2:rxjava:$rxJava2Version"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlin"
     /* Timber */
     implementation "com.jakewharton.timber:timber:$timberVersion"
     //Json
