--- a/versions.gradle
+++ b/versions.gradle
@@ -2,13 +2,13 @@ ext {
     /**
      * Android
      */
-    androidCoreKtxVersion = "1.7.0"
+    androidCoreKtxVersion = "1.8.0"
     lifecycleVersion = "2.4.1"
-    materialVersion = "1.6.0"
-    appcompatVersion = "1.4.1"
+    materialVersion = "1.6.1"
+    appcompatVersion = "1.4.2"
     mediaVersion = "1.5.0"
     constraintlayoutVersopn = "2.1.4"
-    swiperefreshlayoutVersion= "1.1.0"
+    swiperefreshlayoutVersion = "1.1.0"
     recyclerviewVersopn = "1.2.1"
     fragmentKtxVersion = "1.4.1"
     viewbindingpropertydelegateVersion = "1.5.6"
@@ -31,6 +31,13 @@ ext {
     retrofitVersion = "2.9.0" // Retrofit with Moshi Converter
     moshiVersion = "1.12.0" // Moshi
     loggingInterceptorVersion = "4.9.3"   // okhttp3 and logging-interceptor
+
+    /**
+     * Rx
+     */
+    rxAndroidVersion = "2.1.1"
+    rxJava2Version = "2.2.10"
+    rxKotlin = "2.3.0"
     /**
      * Another
      */
