--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,5 @@ include ':core-ui'
 include ':core-utils'
 include ':feature-characters-impl'
 include ':core-common-models'
+include ':feature-events-api'
+include ':feature-events-impl'
