--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,8 +100,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     ////////
+    implementation project(":core-ui")
     implementation project(":core-network-api")
     implementation project(":core-network-impl")
+
     implementation project(":feature-characters-api")
     implementation project(":feature-characters-impl")
+
+    implementation project(":feature-events-api")
+    implementation project(":feature-events-impl")
 }
