--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,5 @@ include ':feature-characters-impl'
 include ':core-common-models'
 include ':feature-events-api'
 include ':feature-events-impl'
+include ':feature-character-api'
+include ':feature-character-impl'
