--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,10 +72,12 @@ dependencies {
 
     /* Navigation */
     implementation"com.github.terrakok:cicerone:$ciceroneVersion"
+
     // Rx
     implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
     implementation "io.reactivex.rxjava2:rxjava:$rxJava2Version"
     implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlin"
+
     /* Timber */
     implementation "com.jakewharton.timber:timber:$timberVersion"
     //Json
@@ -99,6 +101,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
     ////////
     implementation project(":core-ui")
     implementation project(":core-network-api")
@@ -112,4 +115,7 @@ dependencies {
 
     implementation project(":feature-events-api")
     implementation project(":feature-events-impl")
+
+    implementation project(":feature-event-api")
+    implementation project(":feature-event-impl")
 }
