--- a/feature-characters-api/build.gradle
+++ b/feature-characters-api/build.gradle
@@ -47,8 +47,7 @@ android {
 
 dependencies {
     api project(":core-common-models")
-    api project(":core-ui")
+    api "androidx.recyclerview:recyclerview:$recyclerviewVersopn"
     // Rx
     api "io.reactivex.rxjava2:rxjava:$rxJava2Version"
-
 }
