--- a/feature-event-impl/build.gradle
+++ b/feature-event-impl/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
     id 'kotlin-parcelize'
 }
 
@@ -12,7 +13,7 @@ android {
         targetSdk rootProject.targetSdkVersion
         versionCode rootProject.versionCode
         versionName rootProject.versionName
-        setProperty("archivesBaseName", "UnSpotWeb" + "_" + versionName)
+        setProperty("archivesBaseName",  "UnSpotWeb" + "_" + versionName)
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -46,8 +47,12 @@ android {
 }
 
 dependencies {
-    api project(":core-common-models")
-    // Rx
-    api "io.reactivex.rxjava2:rxjava:$rxJava2Version"
+    implementation project(":core-ui")
+    implementation project(":core-utils")
+    implementation project(":feature-characters-api")
+    implementation project(":feature-events-api")
 
+    /* Dagger2 */
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 }
