--- a/feature-events-impl/build.gradle
+++ b/feature-events-impl/build.gradle
@@ -48,8 +48,9 @@ android {
 
 dependencies {
     implementation project(":core-utils")
-    implementation project(":feature-events-api")
     implementation project(":core-network-api")
+    implementation project(":core-ui")
+    implementation project(":feature-events-api")
 
     /* Dagger2 */
     implementation "com.google.dagger:dagger:$daggerVersion"
