--- a/core-network-api/build.gradle
+++ b/core-network-api/build.gradle
@@ -41,6 +41,7 @@ android {
 }
 
 dependencies {
+    api project(":injector")
     /* Retrofit */
     api "com.squareup.retrofit2:retrofit:$retrofitVersion"
     /* Moshi */
