--- a/feature-characters-api/build.gradle
+++ b/feature-characters-api/build.gradle
@@ -46,6 +46,7 @@ android {
 }
 
 dependencies {
+    api project(":injector")
     api project(":core-common-models")
     api "androidx.recyclerview:recyclerview:$recyclerviewVersopn"
     // Rx
