complete first iteration of multi-modular project

--- a/settings.gradle
+++ b/settings.gradle
@@ -35,3 +35,4 @@ include ':feature-events-impl'
 include ':feature-event-api'
 include ':feature-event-impl'
 include ':injector'
+include ':core-navigation'
