--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,8 +103,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     ////////
-    implementation project(":core-utils")
     implementation project(":core-ui")
+    implementation project(":core-navigation")
+    implementation project(":core-utils")
     implementation project(":core-network-api")
     implementation project(":core-network-impl")
 
