--- a/core-ui/build.gradle
+++ b/core-ui/build.gradle
@@ -12,7 +12,6 @@ android {
         targetSdk rootProject.targetSdkVersion
         versionCode rootProject.versionCode
         versionName rootProject.versionName
-        setProperty("archivesBaseName", "UnSpotWeb" + "_" + versionName)
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -43,6 +42,7 @@ android {
 
 dependencies {
     api project(":core-navigation")
+    api project(":core-utils")
 
     api "androidx.core:core-ktx:$androidCoreKtxVersion"
     api "androidx.appcompat:appcompat:$appcompatVersion"
@@ -63,9 +63,6 @@ dependencies {
     /* Dagger2 */
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
-
-    /* Navigation */
-    api"com.github.terrakok:cicerone:$ciceroneVersion"
 
     /* Retrofit */
     api "com.squareup.retrofit2:retrofit:$retrofitVersion"
